[package]
name = "leottaro_commands"
version = "1.0.2"
edition = "2021"
authors = ["Leottaro <leo.hafdane@gmail.com>"]
description = "some simple commands"
repository = "https://github.com/Leottaro/commands"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
glob = "0.3.2"
flate2 = "1.0.35"
tar = "0.4.43"
